inspection and electrical system updates

--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -14,6 +14,13 @@
     <td class="cellInspectionNumber">EM3</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
+      Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or other structure.  (Ref. SL327)
+    </td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM4</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">
       Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then
       power lever through range of travel and look for loose connections, binding parts, rubbing, etc.  <b>CAUTION:</b> Do not move power lever into reverse position with engine stopped or controls
         will be damaged.
@@ -21,58 +28,78 @@
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM4</td>
+    <td class="cellInspectionNumber">EM5</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Inspect all cowling parts for cracks, especially at screw connections and in the
       corners of cut-outs.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM5</td>
+    <td class="cellInspectionNumber">EM6</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
-      chafing. (Reference Service Letter #126).</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM6</td>
-    <td class="cellInspectionInterval">(200)</td>
-    <td class="cellInspectionText">Inspect ITT wires and connectors.</td>
+      chafing. (Ref. SL126).</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM7</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect engine vibration insulators for cracks, swelling, or separation of elastomer.
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
+      chafing. (Ref. SL126).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM7</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">
+      Check the swivel seals/o-rings on propeller, power, fuel condition/shutoff, FCU override, engine alternate air, cockpit heat and auxiliary fuel cables for cracking or deterioration.  (Ref. SL404)
     </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM8</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Examine engine mount for cracks (Reference Service Letter #253) and check torque at
-      firewall connections. Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts.
-      Reinstall safety wire and cotter pins.</td>
+    <td class="cellInspectionText">Inspect engine vibration insulators for cracks, swelling, or separation of elastomer.
+    </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM9</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">
+      Examine engine mount for cracks and corrosion per <xref fileTarget="html/Maintenance/Engine Mount Inspection.html" prependLabel="Section"></xref>, and 
+      check torque at firewall connections.  Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts.  Reinstall safety wire and cotter pins.
+      (Ref. SL253, SL299 and SL335)
+    </td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM10</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).  (Ref. SL173)</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM11</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove and inspect P3 filter.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM10</td>
+    <td class="cellInspectionNumber">EM12</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect SCEET compressor discharge and starter/generator cooling tubes for delamination (as equipped).  (Ref. SL397)</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM13</td>
     <td class="cellInspectionInterval">(2 Years)</td>
     <td class="cellInspectionText">Verify calibration of ITT Indicating System. (See Maintenance Section, ITT INSTRUMENT
       CALIBRATION CHECK for procedures).</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM11</td>
+    <td class="cellInspectionNumber">EM14</td>
     <td class="cellInspectionInterval">(2 Years)</td>
     <td class="cellInspectionText">Verify calibration of Torque Indicating System</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM12</td>
+    <td class="cellInspectionNumber">EM15</td>
     <td class="cellInspectionInterval">(---)</td>
     <td class="cellInspectionText">Perform Hot-Section Inspection at Pratt & Whitney Canada recommended interval.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM13</td>
+    <td class="cellInspectionNumber">EM16</td>
     <td class="cellInspectionInterval">(---)</td>
     <td class="cellInspectionText">Conduct all other inspections according to “Pratt and Whitney Engine Maintenance
       Manual" at the recommended interval.</td>
