--- a/html/Inspection/Insp_PROPELLER.html
+++ b/html/Inspection/Insp_PROPELLER.html
@@ -21,8 +21,8 @@
     <tr>
         <td class="cellInspectionNumber">P4</td>
         <td class="cellInspectionInterval">(100)</td>
-        <td class="cellInspectionText">Check propeller overspeed-solenoid circuit <span style="color: red;">as described in the Maintenance Section,
-            PROPELLER MAINTENANCE.</span> <xref fileTarget="" xrefType="link" prependLabel="Section"></xref>
+        <td class="cellInspectionText">
+            Check Propeller Overspeed Governor and circuit per AFM, Propeller Overspeed Check Procedure.
         </td>
     </tr>
     <tr>
@@ -32,13 +32,25 @@
         </td>
     </tr>
     <tr>
-        <td class="cellInspectionNumber">P6</td>
+        <td class="cellInspectionNumber">P7</td>
+        <td class="cellInspectionInterval">(120)</td>
+        <td class="cellInspectionText">Check the torque of the propeller mounting bolts per Hartzell Alert Service Bulletin A203.  (Ref SL126C)
+        </td>
+    </tr>
+    <tr>
+        <td class="cellInspectionNumber">P8</td>
         <td class="cellInspectionInterval">(1000)</td>
         <td class="cellInspectionText">Dynamic-balance propeller.
         </td>
     </tr>
     <tr>
-        <td class="cellInspectionNumber">P7</td>
+        <td class="cellInspectionNumber">P9</td>
+        <td class="cellInspectionInterval">(12 Months)</td>
+        <td class="cellInspectionText">If equipped with Woodward 8210 Propeller Governor, Inspect and clean beta valve plunger assembly.  (Ref. SL172) 
+        </td>
+    </tr>
+    <tr>
+        <td class="cellInspectionNumber">P10</td>
         <td class="cellInspectionInterval">(---)</td>
         <td class="cellInspectionText">Refer to propeller maintenance manual for other inspections.
         </td>
