--- a/html/Maintenance/Materials Used for Stripping Painting and Preservation.html
+++ b/html/Maintenance/Materials Used for Stripping Painting and Preservation.html
@@ -3,19 +3,22 @@
 
 <p><b><u>High Solids Epoxy Primer on Aluminum Parts</u></b></p>
 
-<p>Desoprime (TM) HS CA 7700/CA 7755 (with BE activator) by PRC DeSoto Aerospace Coatings.  These primers are to be mixed and applied according to the Technical Data Sheet and CA 7700 series Application Guide. </p>
+<p>Desoprime (TM) HS CA 7700/CA 7755 (with BE activator) by PRC DeSoto Aerospace Coatings. These primers are to be mixed
+    and applied according to the Technical Data Sheet and CA 7700 series Application Guide. </p>
 
 <p><b><u>Urethane Topcoat on Aluminum Parts</u></b></p>
 
-<p>Top coat is Desothane HS CA 8800 series or CA 8200 by PRC DeSoto Aerospace Coatings.  CA 8800 is to be used for high gloss top coat colors.  CA 8200 is to be used for matte or flat colors.  The topcoats are to be mixed and applied according to the appropriate Technical Data Sheet and Application Guide. </p>
+<p>Top coat is Desothane HS CA 8800 series or CA 8200 by PRC DeSoto Aerospace Coatings. CA 8800 is to be used for high
+    gloss top coat colors. CA 8200 is to be used for matte or flat colors. The topcoats are to be mixed and applied
+    according to the appropriate Technical Data Sheet and Application Guide. </p>
 
 <p><b><u>Chromated Alkyd Primer Materials</u></b></p>
 
 <table class='plainTableLarge'>
     <tr>
-        <th class=plainTableHeaderCell><b>Part No.</b></th>
-        <th class=plainTableHeaderCell><b>Description</b></th>
-        <th class=plainTableHeaderCell><b>Amount used per A/C</b></th>
+        <th class=plainTableHeaderCell>Part No.</th>
+        <th class=plainTableHeaderCell>Description</th>
+        <th class=plainTableHeaderCell>Amount used per A/C</th>
     </tr>
 
     <tr>
@@ -34,9 +37,9 @@
 
 <table class='plainTableLarge'>
     <tr>
-        <th class=plainTableHeaderCell><b>Part No.</b></th>
-        <th class=plainTableHeaderCell><b>Description</b></th>
-        <th class=plainTableHeaderCell><b>Amount used per A/C</b></th>
+        <th class=plainTableHeaderCell>Part No.</th>
+        <th class=plainTableHeaderCell>Description</th>
+        <th class=plainTableHeaderCell>Amount used per A/C</th>
     </tr>
 
     <tr>
@@ -75,9 +78,9 @@
 
 <table class='plainTableLarge'>
     <tr>
-        <th class=plainTableHeaderCell><b>Part No.</b></th>
-        <th class=plainTableHeaderCell><b>Description</b></th>
-        <th class=plainTableHeaderCell><b>Amount used per A/C</b></th>
+        <th class=plainTableHeaderCell>Part No.</th>
+        <th class=plainTableHeaderCell>Description</th>
+        <th class=plainTableHeaderCell>Amount used per A/C</th>
     </tr>
 
     <tr>
@@ -85,4 +88,4 @@
         <td class='plainTableNormalCell'>Linseed Oil</td>
         <td class='plainTableNormalCell'>1 gal.</td>
     </tr>
-    </table>
+</table>
