--- a/html/Inspection/Insp_GENERAL.html
+++ b/html/Inspection/Insp_GENERAL.html
@@ -2,8 +2,25 @@
     <tr>
         <td class="cellInspectionNumber">G1</td>
         <td class="cellInspectionInterval">(---)</td>
-        <td class="cellInspectionText"><span style="color: red;">Check Maintenance and Lubrication sections of this manual</span> for necessary
-            maintenance and lubrication tasks.
+        <td class="cellInspectionText">
+            Check <xref sectionTarget="4" prependLabel="Section"></xref> (Lubrication) for necessary
+            lubrication tasks.
+        </td>
+    </tr>
+    <tr>
+        <td class="cellInspectionNumber">G2</td>
+        <td class="cellInspectionInterval">(100)</td>
+        <td class="cellInspectionText">
+            Inspect condition of fuel hoses, hydraulic hoses, vacuum hoses, air
+			conditioning hoses, etc. (Ref. SL249)
+        </td>
+    </tr>
+    <tr>
+        <td class="cellInspectionNumber">G3</td>
+        <td class="cellInspectionInterval">(12 Months)</td>
+        <td class="cellInspectionText">
+            Inspect for corrosion in all aircraft structure, components, hardware and
+            per <xref sectionTarget="2.105.5" prependLabel="Section"></xref>.  (Ref. SL299) 
         </td>
     </tr>
 </table>
