--- a/html/Maintenance/Gate Box Controls.html
+++ b/html/Maintenance/Gate Box Controls.html
@@ -1,4 +1,4 @@
-<p>Details of the gate-box controls are shown in Figure 61.  The long push-rod assembly attached to the over-center controls of the gate box is p/n 80172-16 and has a NMB MS14104-4 bearing in the aft end and a Bunting P26-8 bronze bushing in the forward end. The aft end connects to the p/n 80640-1 torque tube assembly which is supported on the fuselage lower longerons with two Fafnir PB 1/2 bearings attach with AN6-7A bolts. </p>
+<p>Details of the gate-box controls are shown below.  The long push-rod assembly attached to the over-center controls of the gate box is p/n 80172-16 and has a NMB MS14104-4 bearing in the aft end and a Bunting P26-8 bronze bushing in the forward end. The aft end connects to the p/n 80640-1 torque tube assembly which is supported on the fuselage lower longerons with two Fafnir PB 1/2 bearings attach with AN6-7A bolts. </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_61.png">
