--- a/html/Maintenance/Spray Lever Controls.html
+++ b/html/Maintenance/Spray Lever Controls.html
@@ -2,7 +2,7 @@
 
 <p><b>AT-802</b></p>
 
-<p>Details of the spray-lever controls are shown beneath. The p/n 82240-1 spray lever assembly is attached to the mid-cockpit frame tube and has an AG-235 micro-control attached to limit the lever travel and hence the spray pressure. Keep the threaded screw on the micro-control greased and make sure the tab on the spray lever contacts the bushing that is attached to the lower adjustment block. </p>
+<p>Details of the spray-lever controls are shown below. The p/n 82240-1 spray lever assembly is attached to the mid-cockpit frame tube and has an AG-235 micro-control attached to limit the lever travel and hence the spray pressure. Keep the threaded screw on the micro-control greased and make sure the tab on the spray lever contacts the bushing that is attached to the lower adjustment block. </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_62A.png">
