--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -84,15 +84,15 @@
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM13</td>
-    <td class="cellInspectionInterval">(2 Years)</td>
-    <td class="cellInspectionText">Verify calibration of ITT Indicating System. (See Maintenance Section, ITT INSTRUMENT
-      CALIBRATION CHECK for procedures).</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">
+      Verify calibration of engine instruments per
+       <xref fileTarget="html/Maintenance/Analog Engine Instrument Calibration.html" prependLabel="Section"></xref>
+       and
+       <xref fileTarget="html/Maintenance/MVP50T Engine Instrument Calibration.html" prependLabel="Section"></xref>
+      .</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM14</td>
-    <td class="cellInspectionInterval">(2 Years)</td>
-    <td class="cellInspectionText">Verify calibration of Torque Indicating System</td>
-  </tr>
+
   <tr>
     <td class="cellInspectionNumber">EM15</td>
     <td class="cellInspectionInterval">(---)</td>
