--- a/html/Inspection/Insp_ELECTRICAL SYSTEM.html
+++ b/html/Inspection/Insp_ELECTRICAL SYSTEM.html
@@ -42,11 +42,6 @@
    <tr>
     <td class="cellInspectionNumber">ES9</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect starter-generator brushes per manufacturer's instructions</td>
-  </tr>
-   <tr>
-    <td class="cellInspectionNumber">ES10</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check calibration of engine instruments.</td>
+    <td class="cellInspectionText">Inspect starter-generator brushes per <xref fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
   </tr>
 </table>
