--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -49,8 +49,7 @@
           </figure>
 
 
-<p>See the section on FLAP ACTUATOR TROUBLESHOOTING for a step-by-step procedure for removing the actuator assembly from
-       the aircraft. </p>
+<p>See Section <xref sectionTarget="2.70.6" labelPrepend="Section"></xref> for a step-by-step procedure for removing the actuator assembly from the aircraft. </p>
 <p>All wires from the flap actuator assembly have Wristlock connections so that it is not necessary to cut or splice
        wires when the actuator is removed. Also, it is possible to replace the motor without removing the actuator
        assembly. </p>
