--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -11,7 +11,7 @@
 
 <p>The safety-glass center windshield can be cleaned with a soft rag and any good glass cleaner. The center windshield p/n is 10665-1 for the AT-802 and p/n 11248-1 for the AT-802A. </p>
 
-<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See FUEL TANKS in Section 2 for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16" to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
+<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See Section <xref sectionTarget="2.75.2" labelPrepend="Section"></xref> for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16" to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
 
 <p>To remove any of the windshields, the following procedure may be followed: </p>
 
