--- a/html/Maintenance/Wing Center Splice Connection.html
+++ b/html/Maintenance/Wing Center Splice Connection.html
@@ -33,7 +33,7 @@
 
 <p>Always use a new nut for replacement after a nut is removed. </p>
 
-<p>For appropriate inspection intervals of the wing center splice connection, see the INSPECTION section of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
+<p>For appropriate inspection intervals of the wing center splice connection, see Section <xref sectionTarget="3.1.13" labelPrepend="Section"></xref> of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
 
 <div class='boxCautionLarge'>
     <p class='boxCautionLargeHeader'>CAUTION</p>
