--- a/html/Maintenance/PROPELLER MAINTENANCE.html
+++ b/html/Maintenance/PROPELLER MAINTENANCE.html
@@ -1,4 +1,4 @@
-<p>Maintenance on your Hartzell propeller is to be done in accordance with the Propeller Owner's Manual and Log Book listed in <xref fileTarget="html/Description/INSTRUCTIONS FOR CONTINUED AIRWORTHINESS.html" prependLabel="Section"></xref> </p>
+<p>Maintenance on your Hartzell propeller is to be done in accordance with the Propeller Owner's Manual and Log Book listed in <xref fileTarget="html/Description/INSTRUCTIONS FOR CONTINUED AIRWORTHINESS.html" prependLabel="Section"></xref>.</p>
 
 
 <p>Propeller pitch settings are -10.0° (reverse), 13.9° (low pitch) at the 42" station for the -67 series propeller. Propeller pitch settings are -11.0° (reverse), 16.5° (low pitch) at the 42" station for the -65 series propeller. See Propeller Owner's Manual for required maintenance and life limited parts. </p>
