--- a/html/Maintenance/Propeller Removal.html
+++ b/html/Maintenance/Propeller Removal.html
@@ -3,12 +3,29 @@
     <li>Turn fuel valve selector lever to OFF. </li>
     <li>Remove engine side cowlings, top cowling, and bottom cowling. </li>
     <li>Disconnect batteries. </li>
-    <li>Remove exhaust stacks.  Cover engine exhaust ducts to prevent FOD from entering engine. </li>
-    <li><img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'><img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'></li>
-    <p>Disconnect the engine beta linkage and carbon block assembly from the beta ring.</p>
-    <p>Exhaust Stack</p>        <p>Beta Linkage and Ring</p>
-    <li>Remove propeller. (Refer to appropriate Hartzell Owner's Manual).  (Removal will require the use of a Beta Ring Puller as described in the Hartzell Owner's Manual). </li>
+    <li>Remove exhaust stacks.  Cover engine exhaust ducts to prevent FOD from entering engine. 
+        <figure>
+            <img class="imageCentered_4x3" src="img/img_ExhaustStack.png">
+            <figcaption class="centerText">Exhaust Stack</figcaption>
+        </figure>
+    </li>
+    <li>
+        Disconnect the engine beta linkage and carbon block assembly from the beta ring.
+        <figure>
+            <img class="imageCentered_3x4" src="img/img_BetaLinkageAndRing.png">
+            <figcaption class="centerText">Beta Linkage and Ring</figcaption>
+        </figure>
+
+    </li>
+
+
+    <li>
+        Remove propeller. (Refer to appropriate Hartzell Owner's Manual).  Removal will require the use of a Beta Ring Puller as described in the Hartzell Owner's Manual.
+        <figure>
+            <img class="imageCentered_4x3" src="img/img_BetaRingPuller.png">
+            <figcaption class="centerText">Beta Ring Puller</figcaption>
+        </figure>
+    </li>
+
 </ol>
 
-<p><img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'></p>
-<p>Beta Ring Puller</p>
