--- a/html/Maintenance/Horizontal Stabilizer Struts.html
+++ b/html/Maintenance/Horizontal Stabilizer Struts.html
@@ -1,16 +1,22 @@
 <p>
-    There are two eyebolts that attach to
-    a welded steel brace inside the stabilizer for strut attachment. Eyebolt replacement should be in accordance with SL
+    The stabilizer struts attach to the fuselage frame with an AN6C13A bolt and to the stabilizer eyebolts with AN6-11A
+    bolts.
+    There are two p/n 30256-1 stainless eyebolts that attach to
+    a welded steel brace inside the stabilizer for strut attachment. Each eyebolt is secured with AN316C8 check nuts.
+    Eyebolt replacement should be in accordance with SL
     129 and <xref sectionTarget="2.200.1" prependLabel="Section"></xref>.
 </p>
 
-
-
 <p>
-    The factory procedure is to align the face of the eyebolts with the strut clevis before the nut on the eyebolt is
-    fully torqued. There is a plug button installed in the skin above the nut.
+    The struts are constructed of 2.36 X 1.00 X .0494130N streamlined tubing and may be repaired if necessary. Check the
+    factory for instructions since an internal tube is installed. They are oiled internally through the threaded
+    fittings on the ends, and should be re-oiled if repaired. They are sand-blasted and given a baked powdered coating
+    for abrasion resistance. At various intervals, the struts should be re-sand-blasted and finished as called out
+    above. Be sure to remove the terminals and plug the open holes before sand-blasting.
 </p>
 
 <p>
-    The stabilizer struts' leading edges are typically protected with 3M 8671-3 anti-abrasion tape.  Thicker protection tape or material should not be installed as damage can occur (ref SL409 and SL383).  The tape should be periodically inspected for condition and replaced as required.
+    The stabilizer struts' leading edges are typically protected with 3M 8671-3 anti-abrasion tape. Thicker protection
+    tape or material should not be installed as damage can occur (ref SL409 and SL383). The tape should be periodically
+    inspected for condition and replaced as required.
 </p>
