--- a/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
+++ b/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
@@ -1,6 +1,6 @@
 <p> <b><u>Initial Rigging Instructions: </u></b></p>
 
-<p>The initial rigging of the Aileron Boos Tabs is performed as follws:</p>
+<p>The initial rigging of the Aileron Boost Tabs is performed as follows:</p>
 <ol type='1'>
     <li>Lock the flight control stick in the neutral position using the cockpit control lock. Confirm that the ailerons
         are in the neutral position and rigged in accordance with the aircraft Owner's Manual.</li>
@@ -10,7 +10,7 @@
     </li>
 
     <li>If necessary, adjust the pushrod length to align boost tab per step 2. Ensure that the pushrod threads are
-        visible in the “witness holes" on the rod end bearings and that the checknuts are tight against the bearings.
+        visible in the “witness holes" on the rod end bearings and that the check nuts are tight against the bearings.
     </li>
 
     <li>Ensure that all hardware is tight and properly installed. </li>
@@ -62,6 +62,6 @@
         the initial rigged position. If additional adjustment is required, contact the Air Tractor factory for
         assistance. </li>
 
-    <li>Ensure that the pushrod threads are visible in the “witness hole" on each rodend bearing, that each checknut is
+    <li>Ensure that the pushrod threads are visible in the “witness hole" on each rod-end bearing, that each check nut is
         tight against the bearings, and that all hardware is tight and properly installed.</li>
 </ol>
