--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -1,62 +1,63 @@
 <table class="tableInspections">
-   <tr>
+  <tr>
     <td class="cellInspectionNumber">FS1</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect the fuel-filter element in the firewall mounted fuel filter and replace if necessary. (Air Tractor p/n 52351-1). If contamination is found, replace the filters (2) on the FCU pump. See Engine Maintenance - FUEL.  Also see Service Letters #229 and #229A for the firewall mounted fuel filter.  See the appropriate Pratt & Whitney maintenance manual for the FCU pump filters.</td>
+    <td class="cellInspectionText">
+      Inspect and clean the fuel-filter element in the firewall mounted fuel filter per
+      <xref sectionTarget="2.50.3" prependLabel="Section"></xref>
+      and replace if necessary. If contamination is found, replace the filters (2) on the FCU pump.
+      (Ref. SL229, SL229A, SL286)
+    </td>
   </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS2</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText"><Check all drain fittings and valves for leaks.</td>
+    <td class="cellInspectionText">Check all drain fittings and valves for leaks.</td>
   </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS3</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check for fuel line chafing from fuel tanks to header tank.</td>
   </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS4</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check fuel tank for leaks.</td>
   </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS5</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Replace high-pressure fuel-pump filter element. (See Engine Maintenance – FUEL for removal and replacement procedures).</td>
+    <td class="cellInspectionText">
+      Replace high-pressure fuel-pump filter element
+       per “Pratt and Whitney Engine Maintenance
+       Manual”
+    </td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">FS6</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check operation of the fuel filter warning system by removing the hose and attaching a gauged vacuum source to the bottom of the vacuum switch.  Apply decreasing pressure gradually (vacuum).  The battery switch should be “ON", and someone in the cockpit to tell when the “FUEL FILTER" warning light goes on.  This should occur at 80 (+/- 1) inches of water (vacuum).</td>
-  </tr>
-    <tr>
-    <td class="cellInspectionNumber">FS7</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Drain fuel tanks and check E position of fuel receiver. (Reference Maintenance Section, FUEL TANK RECEIVER).</td>
-  </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS8</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check functionality of Low Fuel Warning Light.  Light should illuminate when approximately 16 gallons of fuel remain in each wing tank.</td>
+    <td class="cellInspectionText">
+      Check functionality of Low Fuel Warning Light per
+      <xref sectionTarget="2.56.3" prependLabel="Section"></xref>
+      .
+    </td>
   </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS9</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect exterior of header tank on lower side for signs of corrosion from within tank, and interior of tank for contamination per S/L #148.</td>
+    <td class="cellInspectionText">Inspect exterior of header tank on lower side for signs of corrosion from within
+      tank, and interior of tank for contamination per S/L #148.</td>
   </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS10</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Remove finger strainers (steel elbow) from fuel tank and clean.  Inspect for fuel contamination per Service Letter #148.</td>
+    <td class="cellInspectionText">Remove finger strainers (steel elbow) from fuel tank and clean. Inspect for fuel
+      contamination per Service Letter #148.</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">FS11</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Fill fuel tanks and check F position on fuel receiver.</td>
-  </tr>
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">FS12</td>
     <td class="cellInspectionInterval">(---)</td>
-    <td class="cellInspectionText">Clean fuel nozzles, check flow and pattern. (See Engine Maintenance - FUEL for instructions).</td>
+    <td class="cellInspectionText">Clean fuel nozzles, check flow and pattern per “Pratt and Whitney Engine Maintenance
+      Manual” at the recommended interval.</td>
   </tr>
 </table>
