--- a/html/Maintenance/Corrosion Inspection.html
+++ b/html/Maintenance/Corrosion Inspection.html
@@ -1,1 +1,31 @@
-<p style="color:red;">CONTENT NOT CREATED - COPY STUFF FROM SL299</p>
+<p>Corrosion has been found in the area between and around the lower spar cap and spice block junction. Severe corrosion has also been found in several places along the spar caps including extreme corrosion in the vicinity of the aileron push-rod at the aileron. If corrosion is expected, the following steps should be taken:</p>
+
+<ol type="1">
+    <li>Inspect Wing Spar Caps</li>
+        <p>- Remove inspection plates that are on the lower side of the wing leading edge skin. </p>
+            <p>-Visually inspect spar caps with a flashlight and mirror for signs of corrosion.</p>
+    <figure>
+        <img class="imageCentered_3x2" src="img_Fig_SL1.png">
+        <figcaption class="centerText">Wing Spar Caps</figcaption>
+    </figure>
+    <li>Splice new tubes to replace severely corroded tubes.</li>
+    <figure>
+        <img class="imageCentered_3x2" src="img_Fig_SL2.png">
+        <figcaption class="centerText">Corroded Tubes</figcaption>
+    </figure>
+    <li>Inspect tubular support brace inside of the stabilizer.</li>
+        <p>- Inspect at 100-hour intervals on older AT’s.</p>
+        <figure>
+            <img class="imageCentered_4x3" src="img_Fig_SL3.png">
+            <figcaption class="centerText">Tubular Support Brace</figcaption>
+        </figure>
+        <li>Inspect all areas of the engine mount at each annual inspection.</li>
+        <li>Inspect firefighting aircraft annually for corrosion. </li>
+        <li>Wash firefighting aircraft thoroughly and regularly.</li>
+        <figure>
+            <img class="imageCentered_2x3" src="img_Fig_SL4.png">
+            <figcaption class="centerText">firefighting Aircraft Corrosion</figcaption>
+        </figure>
+    </ol>
+
+    <p>For the above cases and other corrosion occurrences, follow the inspection and corrosion removal guidelines found in FAA Advisory Circular 43.13-1B chapter 6. In some instances, it may be possible to remove minor corrosion in the field. If corrosion is found, please contact your dealer who will communicate your information to the Air Tractor service department.</p>
