fixed image link

--- a/html/Maintenance/Corrosion Inspection.html
+++ b/html/Maintenance/Corrosion Inspection.html
@@ -5,7 +5,7 @@
         <p>- Remove inspection plates that are on the lower side of the wing leading edge skin. </p>
             <p>-Visually inspect spar caps with a flashlight and mirror for signs of corrosion.</p>
     <figure>
-        <img class="imageCentered_3x2" src="img_Fig_SL1.png">
+        <img class="imageCentered_3x2" src="img/img_Fig_SL1.png">
         <figcaption class="centerText">Wing Spar Caps</figcaption>
     </figure>
     <li>Splice new tubes to replace severely corroded tubes.</li>
