Corrosion Inspection Updates

--- a/html/Maintenance/Corrosion Inspection.html
+++ b/html/Maintenance/Corrosion Inspection.html
@@ -10,21 +10,21 @@
     </figure>
     <li>Splice new tubes to replace severely corroded tubes.</li>
     <figure>
-        <img class="imageCentered_3x2" src="img_Fig_SL2.png">
+        <img class="imageCentered_3x2" src="img/img_Fig_SL2.png">
         <figcaption class="centerText">Corroded Tubes</figcaption>
     </figure>
     <li>Inspect tubular support brace inside of the stabilizer.</li>
         <p>- Inspect at 100-hour intervals on older AT’s.</p>
         <figure>
-            <img class="imageCentered_4x3" src="img_Fig_SL3.png">
+            <img class="imageCentered_4x3" src="img/img_Fig_SL3.png">
             <figcaption class="centerText">Tubular Support Brace</figcaption>
         </figure>
         <li>Inspect all areas of the engine mount at each annual inspection.</li>
         <li>Inspect firefighting aircraft annually for corrosion. </li>
         <li>Wash firefighting aircraft thoroughly and regularly.</li>
         <figure>
-            <img class="imageCentered_2x3" src="img_Fig_SL4.png">
-            <figcaption class="centerText">firefighting Aircraft Corrosion</figcaption>
+            <img class="imageCentered_3x4" src="img/img_Fig_SL4.png">
+            <figcaption class="centerText">Firefighting Aircraft Corrosion</figcaption>
         </figure>
     </ol>
 
