Engine Mount Inspection

--- a/html/Maintenance/Engine Mount Inspection.html
+++ b/html/Maintenance/Engine Mount Inspection.html
@@ -1,1 +1,20 @@
-<p style="color: red;">CONTENT NOT CREATED - GET CONTENT FROM Service Letters #253, #299 and #335 </p>
+<p>Engine mount cracks are difficult to see during a routine inspection because they are located adjacent to the engine mount ring located inside the plenum. The locations of these cracks are shown below.</p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_2.80.8.1.png">
+    <figcaption class="centerText">Location of reported racks – AT-802 Engine Mount</figcaption>
+</figure>
+<div class="boxCautionSmall">
+    <p class="boxCautionSmallHeader">Note</p>
+    <p class="boxCautionSmallText">View is looking forward from firewall with no engine installed.</p>
+</div>
+
+<p>These areas shown should be visually inspected by a certified mechanic. To perform the inspection, the following steps should be taken:</p>
+<ol type=”1”>
+
+               <li>Remove engine cowling and plenum covers.</li>
+               <li>Inspect engine mount around all tubing clusters where they attach to the engine mount ring.</li>
+               <li>Thoroughly check all around every cluster, using FAA Advisory Circular AC 43.13-1B, Chapter 5, Section 2 as a general guide for proper visual inspection techniques. </li>
+               <li>After inspection, make a notation in aircraft logbooks to indicate that a visual inspection has been completed. </li>
+
+</ol>
