--- a/html/Maintenance/Air Filters.html
+++ b/html/Maintenance/Air Filters.html
@@ -5,3 +5,19 @@
 <p>For aircraft with the p/n 52427-16 Ram Air filter, removal of the filter is accomplished by removing the lower and side cowl skins from the aircraft.  Then completely remove the lower plenum cover to gain access to the filter.  From the righthand side of the airplane, remove the filter retaining band on the aft plenum bulkhead by removing the eight bolts that hold it in place.  The heads of these bolts are on the aft side of the aft plenum bulkhead.  Lastly remove the filter by loosening the four worm drive clamps that hold the filter in place.  This filter may be cleaned using the instructions in Air Tractor Service Letter 257.  The filters are installed in reverse order of removal. </p>
 
 <p>For aircraft with the Brackett BA-413E foam Ram Air filter, removal of the filter element is accomplished by removing the lower and side engine cowls and the lower engine plenum cover.  Remove the center filter support rods by removing the screw on the forward end and sliding them out of their retaining brackets at the aft end.  Remove the old filter element and replace with a new one, ensuring that the filter element completely fills the stainless steel frame, especially in the corners.  Replace the filter support rods, plenum cover, and cowl skins in reverse order of removal.  This filter should not be cleaned, as this may remove the wettant and decrease the filtering ability of the foam.  Any excess dirt or debris that has accumulated on the forward face of the filter may be brushed off with a bristle brush, like a paintbrush, and vacuumed out of the plenum.  The Brackett air filter has a maximum recommended service life of 12 calendar months, regardless of the actual flight time.  The reason is to ensure that acceptable levels of wettant remain in the filter to adequately capture dust and debris. </p>
+
+<p>The best way to protect your engine is to avoid contaminated air. This will also improve the life of air filters. To do this, the following steps can be taken:</p>
+<p>-Use ground idle during ground operation to reduce hte amount of dust stirred up by the propeller.</p>
+<p>When loading multiple airplanes, avoid positioning the airplanes in a way such that one airplane will blow contaminants toward the other. </p>
+
+<p>If contaminated air is unable to be completely avoided, the following maintenance practices can help to minimize reduced TBOs:</p>
+<p>- Point the airplane into the wind during loading so that contaminates blow away from the engine air inlet. </p>
+<p>- Don’t wait for the air filter light to perform air filter maintenance.</p>
+<p>- Clean filters following the cleaning instructions for your specific filter. </p>
+<p>- Replace filters that have reached the end of their life due to hours, age, number of cleanings, or damage.</p>
+<p>- Wash the engine per your Pratt and Whitney Maintenance manual. When handling dry fertilizers or corrosive chemicals, an engine wash (compressor and CT) is recommended after the last flight each day. </p>
+
+<div class="boxCautionSmall">
+    <p class="boxCautionSmallHeader">Note</p>
+    <p class="boxCautionSmallText">Frequently inspect the compressor and turbine discs with a borescope to find early erosion or corrosion. This will help minimize TBOs</p>
+</div>
