--- a/html/Maintenance/Tail Wheel.html
+++ b/html/Maintenance/Tail Wheel.html
@@ -9,4 +9,8 @@
 
 <p>Clean all parts and re-assemble. Partial inflate the tube to keep from pinching it. </p>
 
+<p> Air Tractor is now manufacturing an all-aluminum tail wheel, part number 40260-1 as an option to all other Air Tractor approved tail wheels. All-aluminum tail wheels have proven to be more resistant to chemicals used in aerial application as compared to the original magnesium ones.</p>
+
 <p>Tail wheel bearings are Timken 13889 cone (the part with the rollers) and 13836CP cup (the part pressed into the wheel half). Hand pack the bearings with grease, MIL-G-81322, and install wheel on the axle. Install the 40139-1 jam nut and 40138-1 tongue washer on the axle with the round shoulder inboard and tighten until all bearing slack is removed but the wheel is free to turn. Inflate the tire to 60 psi. Grease the axle bolt and install wheel and axle assembly on the fork. Torque the nut to 550 inch-pounds. Safety the jam nut against the rotation of the wheel with MS20995C32 stainless safety wire. </p>
+
+<p>Along with the new tail wheel, a new axle is being introduced, part number 40134-5. A grease fitting is installed in the axle that allows for purge lubrication of the tail wheel bearings. </p>
