--- a/html/Maintenance/Engine Replacement.html
+++ b/html/Maintenance/Engine Replacement.html
@@ -16,6 +16,12 @@
             <p class="boxCautionLargeText">Prior to installing plenum covers, ensure engine inlet FOD screen cover is
                 removed and inspect area for loose objects.</p>
         </div>
+        <p>Anytime that the engine’s air plenum is opened, the engine’s air inlet screen needs to be covered. Various methods to create a temporary FOD barrier can be used, such as wrapping the screen with plastic sheet or with clean rags, as long as the objective is met to keep contamination out of the inlet when working nearby. Pratt & Whitney can provide an air inlet cover that wraps around the inlet screen and is held in place with Velcro. The cover is bright yellow and has appropriate markings saying to remove before engine operation. The P&W part number is PK3199. It fits all PT6A engines.</p>
+
+        <p>Verify that the lower plenum drain hole is not obstructed and can drain freely. To perform this inspection, remove the lower engine cowling skin and look for the drain hole. This hole is located at the rear end of the bottom of the plenum. </p>
+
+        <p>If the hole is obstructed by the seal (orange in color), please drill another 1/4” diameter hole in the plenum cover that will clear the seal. This new hole should be directly forward of the existing hole and 1 5/8” from the rear edge of the plenum cover. This action is fully described in Service Letter #306.</p>
+
         <div class="boxCautionLarge">
             <p class="boxCautionLargeHeader">CAUTION</p>
             <p class="boxCautionLargeText">The starter generator must be fully supported during removal/installation. Do
