--- a/html/Maintenance/Unapproved Parts.html
+++ b/html/Maintenance/Unapproved Parts.html
@@ -1,10 +1,14 @@
-<p>Unapproved Parts Every ag or firefighting pilot faces various risks and hazards every time they conduct their missions. There is a tremendous amount of training, experience, and awareness that goes into mitigating these risks and avoiding the known hazards that these pilots face. In addition, Air Tractor aircraft are also purposefully designed to mitigate these risks and help protect the pilot. One thing that a pilot should not have to worry about is the approval of the parts installed on their aircraft.</p>
+<p>Every ag or firefighting pilot faces various risks and hazards every time they conduct their missions. There is a tremendous amount of training, experience, and awareness that goes into mitigating these risks and avoiding the known hazards that these pilots face. In addition, Air Tractor aircraft are also purposefully designed to mitigate these risks and help protect the pilot. One thing that a pilot should not have to worry about is the approval of the parts installed on their aircraft.</p>
 <p>All aviation parts and materials go through extensive engineering and quality control processes which enable their use in the safety critical applications on aircraft around the world. These processes are the fundamental to the effort of keeping pilots and maintainers safe. Using unapproved parts on an aircraft that you operate or maintain is not only risky, but also in violation of the regulations.
 An approved part for an aircraft is one that has met the following criteria:</p>
-<p>• It has been Properly Designed</p>
-<p>• It has been Properly Produced</p>
-<p>• It has been Properly Maintained</p>
-<p>• It has been Properly Documented</p>
+<ul>
+
+                <li>It has been Properly Designed</li>
+                <li>It has been Properly Produced</li>
+                <li>It has been Properly Maintained</li>
+                <li>It has been Properly Documented</li>
+</ul>
+
 <p>For parts manufactured by Air Tractor, FAA-approved processes are in place to ensure that the parts are made from the proper materials, have the proper testing, and have the proper inspections to ensure they are safe for use in the environment that they will be operating.</p>
 <p>For parts manufactured by outside vendors, Air Tractor also has processes in place to ensure that these parts meet the requirements needed for their use on aircraft.</p>
 <p>Parts that are purchased commercially off-the-shelf will always have inspections or tests performed that ensure that they meet the needed requirements and any parts that fail these inspections/tests are not approved. In some cases, commercial off-the-shelf parts are modified to meet specific requirements.</p>
