--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -20,6 +20,19 @@
        not to dent or scratch the finish of the ball nut as small dents will interfere with the action of the balls
        inside.</p>
 
+       <p>There is a potentially dangerous condition that may develop due to the cracking and separation of the flap motor mounting studs.</p>
+       <ul>
+              <li>Locate the flap actuator and inspect the flap motor for security. Ensure that both flap motor attachment studs are in place and that the studs are not cracked. See Figure "X".</li>
+              <li>To inspect for cracks, remove the nut and washer and visually inspect. </li>
+              <li>If a cracked or broken stud is found: install new AN565A1032H16 studs per Section 6 of Service Letter #375</li>
+       </ul>
+
+       <p>There have been occasional problems with the electric-flap system relays. The majority of the problems have been relays with burnt contacts. Ag flying, using flaps in turns, is very demanding on the flap system. In a typical hour of ag flying the flap system may be actuated 50 or more times.</p>
+
+       <p>To solve this problem Air Tractor introduced a new heavy duty relay during 1999. These new relays are built by the Kissling Co. The part number of the new relay is 29.221.12. These relays are hermetically sealed and have heavy duty contacts to prevent arcing and burning. </p>
+
+       <p>To install the updated relays in your aircraft, refer to Service Letter #184.</p>
+
 <b>Air Tractor 71112-1 Actuator: </b>
 
 <p>The actuator assembly attaches to the fuselage frame via a clamp. The actuator is attached to this clamp with an
