--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -34,3 +34,7 @@ The sealant may be removed from the edges of the panel and the windshield recess
 <p>The best method to apply the sealant is to mask the retaining strips first and then mask the windshield leaving 1/8" of windshield surface exposed between the tape and the retaining strip. Apply the sealant sparingly to the exposed windshield surface, then remove masking tape. </p>
 
 <p>The sealant starts to cure when catalyzed, so time is precious when applying sealant. The sealant should be allowed a 24-hour cure before stressing. </p>
+
+<p>For aircraft beginning with serial number -0332, Air Tractor began installing thicker center plate windshields in production aircraft. The new windshields are 3/8” thick as compared to the original 1/4" thick windshields. Both windshields are safety plate windshield glass.</p>
+
+<p>If you have aircraft flying in areas with large birds in the vicinity or would like to have extra windshield impact protection, these thicker windshields are available for installation in your aircraft. The windshields install using the same brackets and hardware as the originals. Directions for windshield retrofit can be located in Service Bulletin #276.</p>
