--- a/html/Maintenance/Tail Wheel Lock Pin and Housing.html
+++ b/html/Maintenance/Tail Wheel Lock Pin and Housing.html
@@ -7,7 +7,7 @@
 </p>
 <p>
     There are two different tail wheel lock mechanisms. The "original" and the Sure Lock. The Sure Lock mechanism became
-    standard in 2018-2019.
+    standard in 2018-2019. For operators that are wishing to change from the original lock mechanism to the Sure Lock mechanism, please refer to Service Letter #373.
 </p>
 
 <p class="dontBreakAfter">The original mechanism is shown below.</p>
