--- a/html/Maintenance/Tail Wheel.html
+++ b/html/Maintenance/Tail Wheel.html
@@ -7,6 +7,10 @@
 
 <p>To remove the tail wheel, jack the wheel clear of the ground per Section <xref sectionTarget="2.0.4" labelPrepend="Section">.</xref> and remove the long AN7C84A bolt that attaches the axle to the fork. Note the method of safety wire on the large stainless jam nut and cut the wire loose from the fork. The tail wheel is now free and ready for dis-assembly. Back off the jam nut from the axle and remove the axle. Inspect the axle for wear at the bearing positions, as insufficient greasing procedures will cause the bearing to turn on the axle and ruin both parts. Inspect the AN7 bolt for wear and straightness, and slide the bolt through the fork to check the hole in the fork for wear. There should be no wear in the fork holes since there is no movement between fork and bolt. If the tire is to be removed, deflate and remove the bolts holding the wheel halves together. </p>
 
+<p>There have been two reports of broken AT-802 tail wheel axle bolts. This is the AN7C84A bolt that passes through the tail wheel axle. If broken, this bolt could cause loss of directional control on the ground.</p>
+
+<p>The broken bolts were from the same manufacturer’s lot of bolts and were received in the 2008-2012 timeframe. It is recommended that all tail wheel axle bolts from this lot be replaced. The bolts are identified with the letters “HPF” on the face of the bolt head.</p>
+
 <p>Clean all parts and re-assemble. Partial inflate the tube to keep from pinching it. </p>
 
 <p> Air Tractor is now manufacturing an all-aluminum tail wheel, part number 40260-1 as an option to all other Air Tractor approved tail wheels. All-aluminum tail wheels have proven to be more resistant to chemicals used in aerial application as compared to the original magnesium ones.</p>
