--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -18,3 +18,16 @@
     <img class="imageCentered_3x4" src="img/img_Fig_46.png">
     <figcaption class="centerText">Firewall Fuel Filter</figcaption>
 </figure>
+
+<p>It is possible for the fuel filter canister to allow tiny air bubbles to enter the engine fuel control unit (FCU) if not properly sealed. Air bubbles entering the FCU could cause the engine to lose power or flame out completely.</p>
+
+<p>rubber, of the fuel filter canister should be replaced each time the canister is opened.</p>
+
+<p>The seal of the fuel filter canister can be checked by pressuring it up with the fuel boost pump.</p>
+
+<ol type=‘1’>
+    <li>Ensure that the fuel filter canister is clean and dry.</li>
+    <li>While visually inspecting the canister have a qualified person turn on the fuel boost pump for approximately 30 seconds. The operator should note that the fuel pressure gauge indicates approximately 20 psi. while the boost pump is operating.</li>
+    <li>While the fuel pump is running, and after it is turned off, look carefully for fuel leaks. Pay special attention to the area on top of the canister adjacent to the through bolt head and copper washer and to the area around the rubber sealing washer. Other areas to check are the plug in the head of the through bolt and the plug or quick drain valve in the bottom of the canister.</li>
+    <li>If fuel leaks are found double check the torque on the through bolt. If this does not resolve the leak the sealing washer should be replaced again.</li>
+</ol>
