--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -15,4 +15,6 @@
     <li>Remove the door from the airplane.</li>
 </ol>
 
+<p>Cable ties or any tying method should never be used to secure a cockpit door closed in flight. Tying door handles closed will add steps to normal operation of the door handle and may hinder the operation of the emergency door release which would be a safety issue during an emergency. Modifications to the door latch system should be removed.</p>
+
 <p>The door may be replaced by reversing the order of the steps above. </p>
