--- a/html/Maintenance/ENGINE MAINTENANCE.html
+++ b/html/Maintenance/ENGINE MAINTENANCE.html
@@ -1,3 +1,5 @@
+<p>The Pratt & Whitney manuals are the current and best information by which owner should ensure that their engines are maintained with. These manuals supersedes anything that has been published by Air Tractor as it pertains to maintaining Pratt & Whitney PT6A engines.</p>
+
 <p>Maintenance on your Pratt & Whitney PT6A engine is to be done in accordance with Pratt and Whitney Manuals that are listed under “Instructions for Continued Airworthiness" in the Description section. Time and experience have proven that an engine properly maintained will give excellent service with a minimum of down time and expense. Establish a routine maintenance schedule and adhere to it as closely as possible, taking into consideration the problems of busy schedules in mid-season. </p>
 
 <p>The proper engine manuals for the airplane are listed below: </p>
