--- a/html/Maintenance/Engine Instruments.html
+++ b/html/Maintenance/Engine Instruments.html
@@ -2,6 +2,12 @@
 
 <p>The Fuel Filter Pressure Light, Low Oil Pressure Light, Oil Temperature Indicator, Air Filter Pressure Light, Chip Light, and Hour Meter are all powered by the airplane's electrical system.</p>
 
+<p>There have been a few reports of the face of the torque indicator filling with engine oil on turbine powered aircraft incorporating a “dual wet line” torque indicating system.</p>
+
+<p>When the dual line torque indicating system was incorporated in 2012, an additional line was routed from the low torque pressure port on the engine reduction gear box to a dual port torque indicator. This configuration allows for the reduction gear box internal static pressure to be provided as a reference at the indicator, providing a more accurate torque reading.</p>
+
+<p>It is likely that engine oil from the engine reduction gear box is migrating through the low pressure torque line and filling the torque indicator housing. The torque indicator continues to function properly. If this occurs, the torque indicating system may be retrofitted back to the original “single wet line” configuration following the directions in Service Letter #350.</p>
+
 <p>The wiring schematics for the engine instruments are shown below. </p>
 
 <figure>
