--- a/html/Inspection/Insp_CONTROL SYSTEM.html
+++ b/html/Inspection/Insp_CONTROL SYSTEM.html
@@ -87,7 +87,7 @@
   <tr>
     <td class="cellInspectionNumber">CS18</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check all aileron push-rods and bellcranks for bearing condition, clearance to other parts, loose check nuts, end-play in bellcranks.</td>
+    <td class="cellInspectionText">Check all aileron push-rods and bellcranks for bearing condition, clearance to other parts, loose check nuts, end-play in bellcranks and weld condition. Weld beads on the bellcrank support assembly should run the entire length..</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">CS19</td>
